--- a/HW 4-Copy1.ipynb
+++ b/HW 4-Copy1.ipynb
@@ -67,7 +67,7 @@
     "from sklearn import datasets\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.linear_model import LinearRegression \n",
-    "data = pd.read_csv('bodyfat.csv')\n",
+    "data = pd.read_csv('https://github.com/nehguptasf/ML_HW/blob/master/Data/bodyfat.csv')\n",
     "print(data.shape)\n",
     "data.head()\n",
     "xdata = data.iloc[:,5:]\n",
