--- a/HW 4-Copy1.ipynb
+++ b/HW 4-Copy1.ipynb
@@ -135,7 +135,7 @@
     }
    ],
    "source": [
-    "dataq2 = pd.read_csv('prgeng.csv')\n",
+    "dataq2 = pd.read_csv('https://github.com/nehguptasf/ML_HW/blob/master/Data/prgeng.csv')\n",
     "print(dataq2.shape)\n",
     "dataq2.head()\n",
     "y_q2 = dataq2['wageinc']\n",
